whitespace fixes

--- a/assets/mikio.less
+++ b/assets/mikio.less
@@ -170,7 +170,8 @@
     --button-search-border-color: @ini_darkmode_button_search_border_color;
     --button-search-text-hover-color: @ini_darkmode_button_search_text_hover_color;
     --button-search-background-hover-color: @ini_darkmode_button_search_background_hover_color;
-    --button-search-border-hover-color: @ini_darkmode_button_search_border_hover_color;    --button-default-text-color: @ini_darkmode_button_default_text_color;
+    --button-search-border-hover-color: @ini_darkmode_button_search_border_hover_color;
+    --button-default-text-color: @ini_darkmode_button_default_text_color;
     --button-default-background-color: @ini_darkmode_button_default_background_color;
     --button-default-border-color: @ini_darkmode_button_default_border_color;
     --button-default-text-hover-color: @ini_darkmode_button_default_text_hover_color;
